--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="线程2"
-        android:id="@+id/button6"
+        android:id="@+id/msgBtn2"
         android:layout_below="@+id/msgBtn"
         android:layout_alignLeft="@+id/msgBtn"
         android:layout_alignStart="@+id/msgBtn"
